Fix gap between page one

--- a/src/index.css
+++ b/src/index.css
@@ -344,7 +344,7 @@ button[data-active="true"] {
   display: grid;
   grid-template-columns: 8.5in 8.5in;
   column-gap: 0.25rem;
-  row-gap: 0.25rem;
+  row-gap: 0.125rem;
   min-height: 24in;
 }
 
